--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Shaman</title>
     <link rel="stylesheet" href="main.css">
-    
 </head>
 <body>
     <section class="modal" id="modal">
@@ -22,42 +21,42 @@
             <a>Virtual Shaman</a>
         </div>
     </nav> 
-    <video>
-        <source autoplay src="Sample Video.mp4">
+    <video autoplay>
+        <source  src="Sample Video.mp4">
         Your browser does not support the video tag.
     </video >
     <section class="category-orb" id="one">
-        <a href="#output">
+        <a >
             <img src="imgs/blue orb.png" alt="blue">
             <p>Financial <br> Advice</p>
         </a>
     </section>
     <section class="category-orb" id="two">
-        <a href="#output">
+        <a >
             <img src="imgs/yellow orb.png" alt="yellow">
             <p>Romantic <br> Advice</p>
         </a>
     </section>
     <section class="category-orb" id="three">
-        <a href="#output">
+        <a >
             <img src="imgs/white orb.png" alt="white">
             <p>Career <br> Advice</p>
         </a>
     </section>
     <section class="category-orb" id="four">
-        <a href="#output">
+        <a >
             <img src="imgs/blue orb.png" alt="blue">
             <p>Life <br> Advice</p>
         </a>    
     </section>
     <section class="category-orb" id="five">
-        <a href="#output">
+        <a >
             <img src="imgs/yellow orb.png" alt="yellow">
             <p>School <br> Advice</p>
         </a>
     </section>
     <section class="category-orb" id="six">
-        <a href="#output">
+        <a >
             <img src="imgs/white orb.png" alt="white">
             <p>Friendship<br> Advice</p>
         </a>
@@ -67,5 +66,6 @@
     </section>
     <button class="retry-btn">More Advice?</button>
     <script src="index.js"></script>
+    <script src="prediction.js"></script>
 </body>
 </html>
