--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <a>Virtual Shaman</a>
         </div>
     </nav> 
-    <video autoplay>
+    <img class = "lightning" src="imgs/lightining.png" alt="">
+    <img class = "lightning" src="imgs/lightining2.png" alt="">
+    <img class = "lightning" src="imgs/lightining3.png" alt="">
+    <video autoplay loop>
         <source  src="Sample Video.mp4">
         Your browser does not support the video tag.
     </video >
@@ -64,7 +67,10 @@
     <section class="output" id="output">
         <p id="output-text">Blah Blah Blah. Bad Advice. DO NOT TAKE</p>
     </section>
-    <button class="retry-btn">More Advice?</button>
+    <button id="retry-btn">More Advice?</button>
+    <audio id="Lightning">
+        <source src="imgs/Lightning Strike - Sound Effect (4K).wav" type="audio/mpeg">
+    </audio>
     <script src="index.js"></script>
     <script src="prediction.js"></script>
 </body>
