--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <section class="modal" id="modal">
         <section class="modal-content">
             <h1>Welcome</h1>
-            <p>DO NOT TAKE THIS MANS ADVICE. HE IS A CRAZY ASS SHAMAN. THANK YOU AND GOOD NIGHT ^3^</p>
-            <P>THE SHAMAN HAS BEEN AROUND FOR THOUSANDS OF YEARS. HE GAVE EVERYONE BAD ADVICE THROUGHOUT HISTORY.</P>
+            <p>Shamanism is a religious practice in which a shaman tries to make predictions by interacting with the spirit world through what is now called an \n
+                altered state of consciousness. Using an altered state of consciousness for prediction means your mood will drastically \n
+                impact the prediction's result. So, don't trust the shaman's word, and stay happy!</p>
             <button id = "modalBtn">Continue</button>
         </section>
     </section>
@@ -24,10 +25,11 @@
     <img class = "lightning" src="imgs/lightining.png" alt="">
     <img class = "lightning" src="imgs/lightining2.png" alt="">
     <img class = "lightning" src="imgs/lightining3.png" alt="">
-    <video autoplay loop>
-        <source  src="Sample Video.mp4">
+    <!-- <video autoplay loop>
+        <source id="video-source" src="Sample Video.mp4">
         Your browser does not support the video tag.
-    </video >
+    </video > -->
+    <img id="shaman" src="imgs/FortuneTellingShamen.png" alt="shaman">
     <section class="category-orb" id="one">
         <a >
             <img src="imgs/blue orb.png" alt="blue">
