final final project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </nav> 
     <img class = "lightning" src="imgs/lightining.png" alt="">
-    <img class = "lightning" src="imgs/lightining2.png" alt="">
+    <img class = "rose" src="imgs/rose.png" alt="">
     <img class = "lightning" src="imgs/lightining3.png" alt="">
     <!-- <video autoplay loop>
         <source id="video-source" src="Sample Video.mp4">
@@ -72,6 +72,9 @@
     <button id="retry-btn">More Advice?</button>
     <audio id="Lightning">
         <source src="imgs/Lightning Strike - Sound Effect (4K).wav" type="audio/mpeg">
+    </audio>
+    <audio id="Love">
+        <source src="imgs/SOUND EFFECT - LOVE MOMENT.mp3" type="audio/mpeg">
     </audio>
     <script src="index.js"></script>
     <script src="prediction.js"></script>
